--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -83,7 +83,7 @@ main {
     justify-content: center;
     align-items: center;
     color: yellow;
-    font-size: 2rem;
+    font-size: 1rem;
     text-shadow: #000 1px 1px 5px;
   }
 
@@ -93,6 +93,11 @@ main {
     font-size: 0.75rem;
     padding: 0.25rem;
     border-radius: 50%;
+    width: 0.75rem;
+    height: 0.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
